# zs2fast

./: .gitignore  Cargo.toml  LICENSE  README.md  analyze_blob_floats.py  analyze_elem_structure.py  count_eval_values.py  debug_param_values.py  dump_qs_valsetting.py  find_eigen.py  find_elem_fields.py  find_numeric_scalars.py  find_text_numbers.py  find_value_paths_global.py  find_values.py  find_wert.py  inspect_elem295.py  inspect_param_values_section.py  inspect_paramcontext.py  pyproject.toml  test_paths.py  test_value_mapping.py  test_value_mapping2.py  tmp_scan_eval_paths.py
.github/workflows/: build.yml  publish.yml
src/: lib.rs
