[package]
name = "zs2fast"
version = "0.6.0"
edition = "2021"
description = "Fast Rust/PyO3 parser for ZS2 files with Parquet export"
license = "MIT"
repository = "https://github.com/weltidom/zs2fast"
homepage = "https://github.com/weltidom/zs2fast"

[lib]
name = "zs2fast"
crate-type = ["cdylib"]   # for Python extension

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py39"] }
flate2 = "1"
thiserror = "1"
# Arrow/Parquet: keep versions aligned
arrow = "53"
parquet = "53"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"