[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "zs2fast"
version = "0.6.2"
description = "Fast Rust/PyO3 parser for ZS2 files with Parquet export"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
	{ name = "Dominic Welti" }
]
requires-python = ">=3.9"
dependencies = []
keywords = ["zs2", "parquet", "pyo3", "rust", "materials"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Rust",
	"Operating System :: OS Independent",
	"Topic :: Scientific/Engineering",
	"Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/weltidom/zs2fast"
Repository = "https://github.com/weltidom/zs2fast"
Issues = "https://github.com/weltidom/zs2fast/issues"